Enable require calls in strict-effects module host template

--- a/templates/embedding/module_host/main.go.tmpl
+++ b/templates/embedding/module_host/main.go.tmpl
@@ -38,7 +38,9 @@ end
 
 	_, err = script.Call(context.Background(), "run", []vibes.Value{
 		vibes.NewInt(1000),
-	}, vibes.CallOptions{})
+	}, vibes.CallOptions{
+		AllowRequire: true,
+	})
 	if err != nil {
 		panic(err)
 	}
